syntax = "proto3";

package hvx.api.v1alpha1.device.proto;
option go_package = "github.com/hvxahv/hvx/APIs/v1alpha1/device";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

service Devices {

  // IsExist Gets whether the device is authenticated by the device id.
  // This method returns a boolean value. Returns true if it does not exist
  // Otherwise returns false.
  rpc IsExist (IsExistRequest) returns (IsExistResponse) {}

  // Create To create the logged-in device data, pass the account id
  // and user agent and generate a hash as a unique identifier
  // for the device.
  rpc Create (CreateRequest) returns (CreateResponse) {}

  // Get Get detailed data about the device by its unique device ID.
  rpc Get (GetRequest) returns (Device) {}

  // Get a list of all logged-in devices by account ID.
  rpc GetDevices (google.protobuf.Empty) returns (GetDevicesResponse) {
    option (google.api.http) = {
      get: "/api/v1/device/devices"
    };
  }

  // Delete a device by its device id.
  rpc Delete (DeleteRequest) returns (DeleteResponse) {
    option (google.api.http) = {
      delete: "/api/v1/device",
      body: "*"
    };
  }

  // DeleteDeviceByWithAccountID Delete all login devices by account id.
  rpc DeleteDevices (DeleteDevicesRequest) returns (DeleteDevicesResponse) {}
}

message Device {
  int64 id = 1;
  int64 accountId = 2;
  string device = 3;
  string createdAt = 4;
}

message IsExistRequest {
  int64 id = 1;
}

message IsExistResponse {
  bool isExist = 1;
}

message CreateRequest {
  int64 accountId = 1;
  string ua = 2;
}

message CreateResponse {
  int64 deviceId = 1;
}

message GetRequest {
  int64 deviceId = 1;
}

message GetDevicesResponse {
  string code = 1;
  repeated Device devices = 2;
}

message DeleteDevicesRequest {
  int64 accountId = 1;
}

message DeleteDevicesResponse {
  string code = 1;
  string status = 2;
}

message DeleteRequest {
  int64 deviceId = 1;
}

message DeleteResponse {
  string code = 1;
  string status = 2;
}
